--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="scripts/bubbleScript.js"></script>
-    <script src="scripts/vanilla-tilt.min.js"></script>
-    <script type="text/javascript">
+    <!-- <script src="scripts/vanilla-tilt.min.js"></script> -->
+    <!-- <script type="text/javascript">
         VanillaTilt.init(document.querySelector(".wrap"), {
             max: 20,
             speed: 375,
@@ -197,6 +197,6 @@
         
         //It also supports NodeList
         // VanillaTilt.init(document.querySelectorAll(".your-element"));
-    </script>
+    </script> -->
 </body>
 </html>
